<resources>
    <!-- Application Default-->
    <string name="app_name">YardSale</string>

    <!-- Main Menu Activity -->
    <string name="browse_posts">BROWSE LISTINGS</string>
    <string name="my_posts">MY POSTS</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>

    <!-- Create Post String Resources -->
    <string name="create_post_title">Create A Post</string>
    <string name="posttitle">Title</string>
    <string name="postprice">0</string>
    <string name="postzipcode">Zipcode</string>
    <string name="postdescription">Description&#8230;</string>
    <string name="postcreate">CREATE</string>

    <!-- My Posts String Resources -->
    <string name="my_posts_title">My Posts</string>

    <!-- Login/Create Account Activity -->
    <string name="login">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_postal_code">Postal Code</string>
    <string name="prompt_new_to_yardsale">New to YardSale? Create a new account here.</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_postal_code">Enter Postal Code</string>

    <!-- Search String Resources -->
    <string name="search_title">Listings</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">"Login"</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="loading">Loading</string>
    <string name="login_failed">Login Failed</string>
</resources>
